--- a/app/views/pins/show.erb
+++ b/app/views/pins/show.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <p id="notice"><%= notice %></p>
+  <p id="notice"><%= flash[:success] %></p>
   <h1>
     <i class="fa fa-laptop"></i>
     <%= "#{@pin.title}" %>
