--- a/app/views/pins/edit.erb
+++ b/app/views/pins/edit.erb
@@ -1,46 +1,4 @@
 <h1>Edit a Pin</h1>
 
-<%= form_for(@pin) do |f| %>
 
-  <% if @pin.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-      <ul>
-      <% @pin.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <label for="pin_title">Title</label>
-    <%= f.text_field :title, class: "form-control"%>
-  </div>
-
-  <div class="form-group">
-    <label for="pin_category_id">Category</label>
-    <%= f.collection_select(:category_id, Category.all, :id, :name) %>
-  </div>
-
-  <div class="form-group">
-    <label for="url">URL</label>
-    <%= f.url_field :url, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label for="slug">slug</label>
-    <%= f.text_field :slug, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label for="text">Text</label>
-    <%= f.text_area :text, class: "form-control" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit 'Submit', :class => 'btn btn-success'%>
-  </div>
-
-<% end %>
+<%= render "form" %>
