--- a/app/views/pins/_form.erb
+++ b/app/views/pins/_form.erb
@@ -37,6 +37,11 @@
     <%= f.text_area :text, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <label for="pin_image">Image</label>
+    <%= f.file_field :image, class: "form-control" %>
+  </div>
+
   <div class="actions">
     <%= f.submit 'Submit', :class => 'btn btn-success'%>
   </div>
