--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
 </head>
 <body>
   <div class="container">
+    <div class="pull-right">
+      <h3>
+        <% if session[:user_id]%>
+          <%= "Hi, #{current_user.first_name}" %> |
+          <%= link_to "Logout", logout_path(current_user), method: :delete %>
+        <% end %>
+      </h3>
+    </div>
     <%= yield %>
   </div>
 </body>
